# homework

./: CMakeLists.txt  README.md  main.cpp
hw22_11_22/: 0_1.cpp  dp_train.cpp  hw22_11_30.cpp  kp.cpp  trees.cpp
text/: text.cpp
train/: maisenshu.cpp  t2.cpp
train/dp/: dp.md  dp_t.cpp
train/pta/: p_t.cpp
